# crewai_lapses

./: README.md  pyproject.toml  requirements.txt
src/lapses_ai/: crew.py  main.py
